* talk20190405: minor changes

--- a/math/Kuo-integral.bib
+++ b/math/Kuo-integral.bib
@@ -1,3 +1,7 @@
+%%%%%%%%%%
+% Papers %
+%%%%%%%%%%
+
 @article{HibinoKuoSaitô2018,
 	author = {Hibino, Shinya and Kuo, Hui-Hsiung and Saitô, Kimiaki},
 	title = {A Stochastic Integral by a Near-Martingale},
