--- a/math/large-deviations.bib
+++ b/math/large-deviations.bib
@@ -1,12 +1,24 @@
-*-------*
-| Books |
-*-------*
+%%%%%%%%%
+% Books %
+%%%%%%%%%
+
+@book{FreidlinWentzell2012,
+	author = {Freidlin, Mark I. and Wentzell, Alexander D.},
+	title = {Random Perturbations of Dynamical Systems},
+	year = 2012,
+	edition = 3,
+	series = {Grundlehren der mathematischen Wissenschaften},
+	publisher = {Springer-Verlag},
+	location = {Berlin Heidelberg},
+	isbn = {978-3-642-25847-3},
+	doi = {10.1007/978-3-642-25847-3}
+	issn = {0072-7830}}
 
 
 
-*--------*
-| Papers |
-*--------*
+%%%%%%%%%%
+% Papers %
+%%%%%%%%%%
 
 @article{Cramér1938,
 	author = {Cramér, Harald},
@@ -27,11 +39,11 @@
 	doi = {https://doi.org/10.1002/cpa.3160190303}}
 
 @article{Schilder1966,
-	ISSN = {00029947},
-	URL = {http://www.jstor.org/stable/1994588},
+	issn = {00029947},
+	url = {http://www.jstor.org/stable/1994588},
 	author = {Schilder, M.},
 	journal = {Transactions of the American Mathematical Society},
-	year = {1966}
+	year = {1966},
 	number = {1},
 	pages = {63–85},
 	publisher = {American Mathematical Society},
