--- a/math/bib.bib
+++ b/math/bib.bib
@@ -1,6 +1,6 @@
-*-------*
-| Books |
-*-------*
+%%%%%%%%%
+% Books %
+%%%%%%%%%
 
 @book{Kuo2006,
 	author = {Kuo, Hui-Hsiung},
@@ -60,9 +60,10 @@
 	doi = {10.1093/acprof:oso/9780199657063.001.0001}}
 
 
-*--------*
-| Papers |
-*--------*
+
+%%%%%%%%%%
+% Papers %
+%%%%%%%%%%
 
 @article{Girsanov1960,
 	author = {Girsanov, I. V.},
