--- a/math/Itô.bib
+++ b/math/Itô.bib
@@ -12,6 +12,14 @@
 	url = "https://projecteuclid.org/euclid.aspm/1546542600",
 	year = "2004"}
 
+@inproceedings{Itô1978,
+	author = "Itô, Kiyosi",
+	title = "Extension of stochastic integrals",
+	booktitle = "Proceedings of the International Symposium on Stochastic Differential Equations",
+	year = 1978,
+	pages = {95–109},
+	publisher={Kinokuniya}}
+
 @inproceedings{Itô1972,
 	address = "Berkeley, Calif.",
 	author = "Itô, Kiyosi",
