* talk20190405: minor corrections

--- a/math/talks/talk20190405.tex
+++ b/math/talks/talk20190405.tex
@@ -520,9 +520,11 @@
 
 		\item  Question: What are the analogues of the martingale property and the Markov property?
 
-		\item  Answer for martingales: near-martingales \cite[short][KuoSaeTangSzozda2012].
+		% \item  Answer for martingales: near-martingales \cite[short][KuoSaeTangSzozda2012].
 
-		\item  Example: \m{𝔼(B_T B_t - t ∣ ℱ_s) = B_s^2 - s ≠ B_T B_s - s}, but \m{𝔼(B_T B_s - s ∣ ℱ_s) = B_s^2 - s}. \smile
+		\item  Example: \m{𝔼(B_T B_t - t ∣ ℱ_s) = B_s^2 - s ≠ B_T B_s - s} \frown
+
+			But \m{𝔼(B_T B_s - s ∣ ℱ_s) = B_s^2 - s}. \smile
 
 		\item  Let \m{Z(t)} be a process such that \m{𝔼\abs[Z(t)] < ∞ \ ∀ t}, and \m{0 ≤ s ≤ t ≤ T}. Then \m{Z(t)} is called a
 			\startitemize [5, joinedup]
