* talk20190405: minor corrections

--- a/math/talks/talk20190405.tex
+++ b/math/talks/talk20190405.tex
@@ -561,13 +561,13 @@
 		\FL
 
 		\NC  \good{Itô}
-		\NC  \good{X_t = X_0 + ∫_0^t m_s \d s + ∫_0^t σ_s \d B_s}
+		\NC  \good{X_{\argdotsub} = X_0 + ∫_0^{\argdotsup} m_t \d t + ∫_0^{\argdotsup} σ_t \d B_t}
 		\NC  \good{\d X_t = m_t \d t + σ_t \d B_t}
 
 		\NR
 
 		\NC  \okay{instantly independent}
-		\NC  \okay{Y^t = Y^0 + ∫_t^T η^s \d s + ∫_t^T ς^s \d B_s}
+		\NC  \okay{Y^{\argdotsup} = Y^0 + ∫_{\argdotsub}^T η^t \d t + ∫_{\argdotsub}^T ς^t \d B_t}
 		\NC  \okay{\d Y^t = - η^t \d t - ς^t \d B_t}
 
 		\NR
