--- a/math/talks/talk20190405.tex
+++ b/math/talks/talk20190405.tex
@@ -617,7 +617,7 @@
 	Example\cite[short][HwangKuoSaitôZhai2016]: For the new integral, \m{∫_0^T \brnd[∫_0^T B_u \d u] \d B_v = ∫_0^T \brnd[∫_0^T B_u \d B_v] \d u}.
 \stopslide
 
-\startslide [title={Generalization of Itô isometry}]
+\startslide [title={A generalization of Itô isometry}]
 
 	\starttheorem [title={\cite[short][KuoSaeTangSzozda2012]}]
 		Let \m{ϕ} be an analytic function on \m{ℝ}. Then under integrability conditions and for each \m{t},
