* talk20190405.pdf: Example for L^2_loc

--- a/math/talks/talk20190405.tex
+++ b/math/talks/talk20190405.tex
@@ -258,7 +258,7 @@
 				\item  \okay{local} martingale.
 			\stopitemize
 
-		% \item  TODO  Example: \m{∫_0^T e^{B_t^2} \d B_t = ∫_0^{B_T} e^{t^2} \d t - ∫_0^T B_t e^{B_t^2} \d t}.
+		\item  Example: \m{∫_0^T e^{B_t^2} \d B_t = ∫_0^{B_T} e^{t^2} \d t - ∫_0^T B_t e^{B_t^2} \d t}.
 
 	\stopitemize
 \stopslide
@@ -751,7 +751,7 @@
 
 		\item  The setup: \m{(X_n)} is a stochastic process on \m{(Ω, ℱ, ℙ)} taking values in a Polish space \m{(𝓧, d)}.
 
-		\item  A function \m{I: 𝓧 → [0, ∞]} is called a \important{rate function} if it has compact level sets.
+		\item  A function \m{I: 𝓧 → [0, ∞]} is called a \important{rate function} if it has compact lower level sets.
 
 		% \item  \m{I} is lower semicontinuous and attains its infimum on every nonempty closed set.
 
